Updated dashboardconfig workbench sizes

--- a/components/operators/openshift-ai/instance/components/model-server-pod-sizes/patch-rhoai-dashboard.yaml
+++ b/components/operators/openshift-ai/instance/components/model-server-pod-sizes/patch-rhoai-dashboard.yaml
@@ -28,3 +28,11 @@ spec:
         requests:
           cpu: '6'
           memory: 16Gi
+    - name: Small-Medium
+      resources:
+        limits:
+          cpu: '6'
+          memory: 8Gi
+        requests:
+          cpu: '4'
+          memory: 4Gi
