--- a/components/operators/openshift-ai/instance/components/notebook-pod-sizes/patch-rhoai-dashboard.yaml
+++ b/components/operators/openshift-ai/instance/components/notebook-pod-sizes/patch-rhoai-dashboard.yaml
@@ -36,3 +36,11 @@ spec:
         requests:
           cpu: '15'
           memory: 120Gi
+    - name: Small-Medium
+      resources:
+        limits:
+          cpu: '4'
+          memory: 10Gi
+        requests:
+          cpu: '2'
+          memory: 8Gi
