--- a/tenants/parasol-insurance/custom-workbench/base/custom-workbench-is.yaml
+++ b/tenants/parasol-insurance/custom-workbench/base/custom-workbench-is.yaml
@@ -21,7 +21,7 @@ spec:
       annotations:
         opendatahub.io/notebook-python-dependencies: '[]'
         opendatahub.io/notebook-software: '[]'
-        openshift.io/imported-from: 'quay.io/{quay_id}/workbench-images:jupyter-datascience-ubi9-python-3.11-2024b_{update_this}'
+        openshift.io/imported-from: 'http://quay.io/asheet/workbench-images:jupyter-datascience-ubi9-python-3.11-2024b_20250512'
       from:
         kind: DockerImage
         name: 'http://quay.io/asheet/workbench-images:jupyter-datascience-ubi9-python-3.11-2024b_20250512'
