--- a/tenants/parasol-insurance/data-science-pipelines/base/dspa.yaml
+++ b/tenants/parasol-insurance/data-science-pipelines/base/dspa.yaml
@@ -26,10 +26,9 @@ spec:
       port: ''
       region: us-east-1
       s3CredentialsSecret:
-        accessKey: AWS_ACCESS_KEY_ID # Update with minio access key
-        secretKey: AWS_SECRET_ACCESS_KEY # Update with minio secret key
-        secretName: <secret-name> # Update with the secret name
-      scheme: http
+        accessKey: minio # Update with minio access key
+        secretKey: minio123 # Update with minio secret key
+        secretName: minio-data-connection
   persistenceAgent:
     deploy: true
     numWorkers: 2
