--- a/tenants/parasol-insurance/data-science-pipelines/base/dspa.yaml
+++ b/tenants/parasol-insurance/data-science-pipelines/base/dspa.yaml
@@ -29,6 +29,7 @@ spec:
         accessKey: minio # Update with minio access key
         secretKey: minio123 # Update with minio secret key
         secretName: minio-data-connection
+      scheme: http
   persistenceAgent:
     deploy: true
     numWorkers: 2
